impl some api
